--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="https://ait.ethz.ch/people/cheguo">Chen Guo</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              Kaiyue Shensup>1</sup>,
+              Kaiyue Shen<sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://inf.ethz.ch/people/people-atoz/person-detail.MjUwNDAx.TGlzdC8zMDQsLTIxNDE4MTU0NjA=.html">Tianjian Jiang</a><sup>1</sup>,
