--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">EMDB: The Electromagnetic Database of Global 3D Human Pose and Shape in the Wild</h1>
+          <h1 class="title is-1 publication-title">EMDB</h1>
+          <h1 class="title is-1 publication-title">The Electromagnetic Database of Global 3D Human Pose and Shape in the Wild</h1>
+
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">ICCV 2023</span>
+          </div>
+
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ait.ethz.ch/people/kamanuel">Manuel Kaufmann</a><sup>1</sup>,
@@ -68,10 +74,6 @@
             <span class="author-block"><sup>1</sup>ETH Zürich,</span>
             <span class="author-block"><sup>2</sup>Meta Reality Labs
             </span>
-          </div>
-
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">ICCV 2023</span>
           </div>
 
           <div class="column has-text-centered">
@@ -135,7 +137,7 @@
     <div class="hero-body">
         <img src="https://files.ait.ethz.ch/projects/emdb/assets/teaser.jpg"  class="center"/>
       <h2 class="subtitle has-text-centered">
-        EMDB is a novel dataset that provides accurate SMPL pose and shape parameters including global camera and body trajectories for in-the-wild videos. (left and middle) Challenging example poses taken from EMDB. (right, 1-4) Visualization of global body center trajectory and the corresponding 3D poses projected into the camera view.
+        EMDB is a novel dataset that provides accurate SMPL pose and shape parameters including global camera and body trajectories for in-the-wild videos.
       </h2>
     </div>
   </div>
@@ -174,7 +176,7 @@
     <h2 class="title">Method</h2>
     <img src="https://files.ait.ethz.ch/projects/emdb/assets/method.jpg"  height="250" class="center"/>
     <p>
-      Method overview. We first scan a subject in minimal clothing with a multi-view volumetric capture system to obtain their reference shape parameters and calibrate subject-specific skin-to-sensor offsets in regular clothing (left). We subsequently fit SMPL to in-the-wild data with a multi-stage optimization pipeline. Stage 1 fits SMPL to the EM measurements in EM-local space leveraging the calibrated body shape and skin-to-sensor offsets. Stage 2 aligns the local fit with the world, by jointly optimizing over 2D keypoints, depth, camera poses, EM measurements, and the output of stage 1. Stage 3 then refines the output of stage 2 by fitting a neural implicit body model with detailed geometry and appearance to the RGB images via a pixel-level supervision signal to boost smoothness and image-to-pose alignment.
+      We first scan a subject in minimal clothing with a multi-view volumetric capture system to obtain their reference shape parameters and calibrate subject-specific skin-to-sensor offsets in regular clothing (left). We subsequently fit SMPL to in-the-wild data with a multi-stage optimization pipeline. Stage 1 fits SMPL to the EM measurements in EM-local space leveraging the calibrated body shape and skin-to-sensor offsets. Stage 2 aligns the local fit with the world, by jointly optimizing over 2D keypoints, depth, camera poses, EM measurements, and the output of stage 1. Stage 3 then refines the output of stage 2 by fitting a neural implicit body model with detailed geometry and appearance to the RGB images via a pixel-level supervision signal to boost smoothness and image-to-pose alignment.
     </p>
   </div>
 </section>
@@ -202,7 +204,7 @@
           </div>
           <div class="item item-chair-tp">
             <video poster="" autoplay controls muted loop height="100%">
-              <source src="http://files.ait.ethz.ch/projects/emdb/assets/P8_76_overlay_small.mp4" type="video/mp4">
+              <source src="http://files.ait.ethz.ch/projects/emdb/assets/P9_76_overlay_small.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-chair-tp">
@@ -241,7 +243,7 @@
   </section>
 
     <h3 class="title">Global Trajectories</h3>
-      <section class="hero is-light is-small">
+      <section class="hero is-light">
     <div class="hero-body">
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
@@ -316,11 +318,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{kaufmann2023emdb,
-      author = {Kaufmann, Manuel and Song, Jie and Guo, Chen and Shen, Kaiyue and Jiang, Tianjian and Tang, Chengcheng and Z{\'a}rate, Juan Jos{\'e} and Hilliges, Otmar},
-      title = {{EMDB}: The {E}lectromagnetic {D}atabase of {G}lobal 3{D} {H}uman {P}ose and {S}hape in the {W}ild},
-      booktitle = {International Conference on Computer Vision (ICCV)},
-      year = {2023}
-      }
+  author = {Kaufmann, Manuel and Song, Jie and Guo, Chen and Shen, Kaiyue and Jiang, Tianjian and Tang, Chengcheng and Z{\'a}rate, Juan Jos{\'e} and Hilliges, Otmar},
+  title = {{EMDB}: The {E}lectromagnetic {D}atabase of {G}lobal 3{D} {H}uman {P}ose and {S}hape in the {W}ild},
+  booktitle = {International Conference on Computer Vision (ICCV)},
+  year = {2023}
+}
     </code></pre>
   </div>
 </section>
