Project page updates.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h1 class="title is-1 publication-title">EMDB</h1>
           <h1 class="title is-1 publication-title">The Electromagnetic Database of Global 3D Human Pose and Shape in the Wild</h1>
 
-          <div class="is-size-5 publication-authors">
+          <div class="is-size-4 publication-authors">
             <span class="author-block">ICCV 2023</span>
           </div>
 
@@ -187,7 +187,7 @@
     <p>EMDB contains SMPL poses with global body root and camera trajectories. In the following we show some samples taken from EMDB.</p>
     <p>To download EMDB, please fill out the <a href="htpps://emdb.ait.ethz.ch">online application form</a>. After approval of your application, you will receive an e-mail with instructions how to download the data.</p>
 
-    <h3 class="title">Camera-Relative Visualizations</h3>
+    <h3 class="title">SMPL Poses</h3>
     <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
@@ -243,10 +243,10 @@
   </section>
 
     <h3 class="title">Global Trajectories</h3>
-      <section class="hero is-light">
+      <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
-        <div id="results-carousel" class="carousel results-carousel">
+        <div id="results-carousel" class="carousel results-carousel" style="height:350px">
           <div class="item item-steve">
             <video poster="" autoplay controls muted loop height="100%">
               <source src="http://files.ait.ethz.ch/projects/emdb/assets/P5_40_small.mp4" type="video/mp4">
