--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
-        <div id="results-carousel" class="carousel results-carousel" style="height:350px">
+        <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-steve">
             <video poster="" autoplay controls muted loop height="100%">
               <source src="http://files.ait.ethz.ch/projects/emdb/assets/P5_40_small.mp4" type="video/mp4">
