--- a/index.html
+++ b/index.html
@@ -299,9 +299,8 @@
   <div class="container is-max-desktop content">
     <h2 class="title">Acknowledgments</h2>
     <p>
-      We thank Robert Wang, Emre Aksan, Braden Copple, Kevin Harris, Mishael Herrmann, Mark Hogan, Stephen Olsen, Lingling Tao, Christopher Twigg, and Yi Zhao for their support. Thanks to Dean Bakker, Andrew Searle, and Stefan Walter for their help with our infrastructure. Thanks to Marek, developer of record3d, for his help with the app. Thanks to Laura Wülfroth and Deniz Yildiz for their assistance with capture. Thanks to Dario Mylonopoulos for his priceless work on <a href="https://github.com/eth-ait/aitviewer">aitviewer</a> which we used extensively in this work. All visualizations were done with aitviewer. We are grateful to all our participants for their valued contribution to this research. Computations were carried out in part on the ETH Euler cluster.
+      We thank Robert Wang, Emre Aksan, Braden Copple, Kevin Harris, Mishael Herrmann, Mark Hogan, Stephen Olsen, Lingling Tao, Christopher Twigg, and Yi Zhao for their support. Thanks to Dean Bakker, Andrew Searle, and Stefan Walter for their help with our infrastructure. Thanks to Marek, developer of record3d, for his help with the app. Thanks to Laura Wülfroth and Deniz Yildiz for their assistance with capture. Thanks to Dario Mylonopoulos for his priceless work on the <a href="https://github.com/eth-ait/aitviewer">aitviewer</a> which we used extensively in this work. All visualizations were done with aitviewer. We are grateful to all our participants for their valued contribution to this research. Computations were carried out in part on the ETH Euler cluster.
     </p>
-
   </div>
 </section>
 
@@ -324,6 +323,13 @@
   year = {2023}
 }
     </code></pre>
+  </div>
+</section>
+
+  <section class="section" id="Disclaimer">
+  <div class="container is-max-desktop content">
+    <h2 class="title">Disclaimer</h2>
+    <p>Data acquisition, development of the processing pipeline and all experiments have been performed entirely at ETH Zurich. Meta did not obtain any data or code prior to publication and did not conduct any experiments in this work.</p>
   </div>
 </section>
 
