--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://youtu.be/H66-YE4GUHI?feature=shared"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
